# msagl-rust

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Enforcing LLM Code Translation Quality.md  LICENSE-MIT  LLM Code Porting_ Complexity and Fidelity.md  README.md  compass_artifact_wf-4b5b1eb9-6caf-4700-a782-2c784d574f09_text_markdown.md  rust-code-audit.md
.claude/: settings.json
.claude/hooks/: check-banned-patterns.sh
.claude/skills/: port-algo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: bench_msagljs.mjs  bench_python.py  bench_wasm.mjs  generate_scenarios.py  render_scenarios.py  routing.rs
benches/bench_csharp/: Program.cs  bench_csharp.csproj
benches/scenarios/: large.json  medium.json  small.json
crates/msagl-python/: Cargo.toml  msagl.pyi  pyproject.toml
crates/msagl-python/src/: lib.rs
crates/msagl-wasm/: Cargo.toml
crates/msagl-wasm/src/: lib.rs
docs/: PRD-faithful-port-remediation.md  PRD-v2-complete-port.md  PRD-v3-api-audit.md  PRD-v4-remaining-work.md  algorithmic-parity-audit-2026-03-26.md  backup-free-space-finder-agent-a4219d6e.rs  backup-free-space-finder-diff.patch  backup-free-space-finder-sweep-agent-a4219d6e.rs  backup-nudging-mod-agent-a4219d6e.rs  backup-nudging-mod-diff.patch  backup-sweep-GOOD-aa9aeaf6.rs  c-sharp-test-analysis.md  code-review-2026-03-25.md  cs-rust-parity-audit-2026-03-27.md  porting-shortcuts-tracker.md  routing-test-failures.md  solver-failure-triage.md  solver-performance-audit-2026-03-26.md  struct-refactor-plan.md
examples/: basic.rs  custom_params.rs  multi_edge.rs  route_and_dump.rs
reference/: port_manager_connectivity.ts  port_manager_edge_splicing.ts  port_manager_entrances.ts  port_manager_fields.ts  port_manager_free_points.ts  port_manager_lifecycle.ts  port_manager_port_to_graph.ts  port_manager_port_to_graph_skeleton.rs
scripts/: run-benchmarks.sh
src/: arenas.rs  lib.rs
src/geometry/: convex_hull.rs  curve.rs  mod.rs  point.rs  point_comparer.rs  polyline.rs  rectangle.rs
src/projection_solver/: block.rs  constraint.rs  constraint_vector.rs  mod.rs  parameters.rs  qpsc.rs  solution.rs  solver_shell.rs  uniform_solver.rs  variable.rs  violation_cache.rs
src/routing/: compass_direction.rs  edge_geometry.rs  event_queue.rs  free_point.rs  group_boundary_crossing.rs  lookahead_scan.rs  mod.rs  msmt_path.rs  neighbor_sides.rs  obstacle.rs  obstacle_side.rs  obstacle_tree.rs  obstacle_tree_overlap.rs  obstacle_tree_queries.rs  overlap_convex_hull.rs  path_search.rs  port.rs  (+21 more)
tests/: geometry.rs  integration.rs  projection_solver.rs  rectilinear_stateful_tests.rs  rectilinear_tests.rs  rectilinear_tests_almostflat.rs  rectilinear_tests_almostflat_multi.rs  rectilinear_tests_batch3.rs  rectilinear_tests_convexhull.rs  rectilinear_tests_freeports.rs  rectilinear_tests_groups.rs  rectilinear_tests_groups2.rs  rectilinear_tests_missing.rs  rectilinear_tests_nonrect.rs  rectilinear_tests_obstacleport.rs  rectilinear_tests_overlap.rs  rectilinear_tests_reflection.rs  rectilinear_tests_remaining.rs  routing_tests.rs  smoke_test.rs  visibility.rs
tools/: api-diff.mjs  compliance-check.sh
(+83 files in other folders)
