[workspace]
members = [".", "crates/msagl-wasm", "crates/msagl-python"]

[package]
name = "msagl-rust"
version = "0.1.0"
edition = "2021"
description = "Rectilinear edge router for orthogonal graph layouts, ported from Microsoft's MSAGL"
license = "MIT"
repository = "https://github.com/ByteBard97/msagl-rust"

[dependencies]
ordered-float = "5"
slotmap = "1"
kurbo = "0.13"
rstar = "0.12"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "routing"
harness = false

[profile.release]
lto = true
opt-level = "s"
