[package]
name = "msagl-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for msagl-rust rectilinear edge router"
license = "MIT"

[lib]
name = "msagl"
crate-type = ["cdylib"]

[dependencies]
msagl-rust = { path = "../.." }
pyo3 = { version = "0.25", features = ["extension-module"] }
