[package]
name = "msagl-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for msagl-rust rectilinear edge router"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
msagl-rust = { path = "../.." }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify-next = { version = "0.5", features = ["js"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
